--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "vatly/vatly-api-php": "dev-main"
     },
     "require-dev": {
+        "mockery/mockery": "^1.6",
         "pestphp/pest": "^3.0"
     },
     "repositories": [
