--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
           composer config github-oauth.github.com ${{ secrets.COMPOSER_AUTH_TOKEN }}
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-interaction
+        run: composer update --prefer-dist --no-interaction
 
       - name: Run tests
         run: vendor/bin/pest
