--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
             "pestphp/pest-plugin": true
         }
     },
+    "scripts": {
+        "test": "vendor/bin/pest"
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
