refactor: namespace Vatly\ -> Vatly\Fluent\
Clear separation across the package ecosystem:
- Vatly\API\    (vatly-api-php)
- Vatly\Fluent\ (vatly-fluent-php)
- Vatly\Laravel\ (vatly-laravel)

BREAKING: All imports from this package change from Vatly\* to Vatly\Fluent\*

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Vatly\\": "src/"
+            "Vatly\\Fluent\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Vatly\\Tests\\": "tests/"
+            "Vatly\\Fluent\\Tests\\": "tests/"
         }
     },
     "config": {
